--- a/BluetoothDetection/BluetoothDetection/View/ProfileTableViewCell.xib
+++ b/BluetoothDetection/BluetoothDetection/View/ProfileTableViewCell.xib
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="99" id="TTH-8K-3f9" customClass="ProfileTableViewCell" customModule="BluetoothDetection" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="424" height="99"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="100" id="TTH-8K-3f9" customClass="ProfileTableViewCell" customModule="BluetoothDetection" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="424" height="100"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TTH-8K-3f9" id="Qgd-uo-XzK">
-                <rect key="frame" x="0.0" y="0.0" width="424" height="98.666666666666671"/>
+                <rect key="frame" x="0.0" y="0.0" width="424" height="99.666666666666671"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Person account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Okp-Bh-yfz">
-                        <rect key="frame" x="15" y="41" width="110" height="17"/>
+                        <rect key="frame" x="15" y="15" width="110" height="69.666666666666671"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="110" id="QV5-95-KcH"/>
                         </constraints>
@@ -28,7 +28,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mr Firstname LASTNAME" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bae-jL-UCf">
-                        <rect key="frame" x="165" y="40.333333333333336" width="239" height="18"/>
+                        <rect key="frame" x="165" y="15" width="239" height="69.666666666666671"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -38,9 +38,11 @@
                     <constraint firstItem="Bae-jL-UCf" firstAttribute="leading" secondItem="Okp-Bh-yfz" secondAttribute="trailing" constant="70" id="91T-Bq-YlU">
                         <variation key="heightClass=regular-widthClass=compact" constant="40"/>
                     </constraint>
+                    <constraint firstItem="Okp-Bh-yfz" firstAttribute="top" secondItem="Qgd-uo-XzK" secondAttribute="top" constant="15" id="9zQ-gv-W3E"/>
                     <constraint firstItem="Bae-jL-UCf" firstAttribute="centerY" secondItem="Qgd-uo-XzK" secondAttribute="centerY" id="ClD-Vh-24r"/>
                     <constraint firstItem="Okp-Bh-yfz" firstAttribute="leading" secondItem="Qgd-uo-XzK" secondAttribute="leading" constant="15" id="N7j-X8-p8z"/>
                     <constraint firstItem="Okp-Bh-yfz" firstAttribute="centerY" secondItem="Qgd-uo-XzK" secondAttribute="centerY" id="t00-RS-gDo"/>
+                    <constraint firstItem="Bae-jL-UCf" firstAttribute="top" secondItem="Qgd-uo-XzK" secondAttribute="top" constant="15" id="x97-p8-Wx3"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -48,7 +50,7 @@
                 <outlet property="contentLabel" destination="Bae-jL-UCf" id="Xhg-c4-U1q"/>
                 <outlet property="headerLabel" destination="Okp-Bh-yfz" id="KTN-JS-Qe8"/>
             </connections>
-            <point key="canvasLocation" x="-78.400000000000006" y="60.221674876847295"/>
+            <point key="canvasLocation" x="-78.400000000000006" y="60.591133004926114"/>
         </tableViewCell>
     </objects>
 </document>
